--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+}
 .text{
     color: rgb(158, 7, 223);
     font-size: 24px;
@@ -7,4 +12,8 @@
 }
 .text1{
     text-align: center;
+}
+
+.btn{
+  
 }
