--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,99 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
-.text{
-    color: rgb(158, 7, 223);
-    font-size: 24px;
-    border: 4px solid red;
-    margin-top: 3px;
-    text-align: center;
-}
-.text1{
-    text-align: center;
+
+*{
+   margin: 0;
+   padding: 0; 
+   box-sizing: border-box;
 }
 
-.btn{
-  
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px auto;
+    max-width: 1600;
+    width: 75%;
 }
+
+.header{
+   background-color: #1A0B2E;
+   padding-top: 16px;
+   padding-bottom: 16px;
+}
+.logo{
+    color: white;
+}
+
+nav .menu {
+    display: flex;
+    list-style-type: none;
+    gap: 32px;
+    align-items: center;
+   
+}
+
+nav .menu a {
+    font-size: 16px;
+    color:#FFFFFF;
+    text-decoration: none;
+    line-height: 120%;
+}
+
+.menu a:hover {
+  color: #f67905;
+}
+
+.menu a:active {
+  color: #02b423;
+}
+
+.logo {
+  font-size: 50px;
+  letter-spacing: 0px;          
+}
+
+.text-white {
+  color: #ffffff;
+}
+
+.text-gradient {
+  background: linear-gradient(25deg,#F7E93F 0%, #FB09B4 51%, #9100F8 100%);
+  background-clip: text;
+  color: transparent;
+}
+
+.subscribe-btn {
+  background: linear-gradient(25deg, #F7E93F 0%, #FB09B4 , #9100F8 100%);
+  color: white;
+  border: none;
+  width: 135px;
+  height: 44px;
+  padding: 16px 12px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 1000px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  box-shadow: 0 0 0 4px rgba(255, 0, 255, 0.15);
+  transition: all 0.3s ease;
+}
+
+.subscribe-btn span {
+  font-size: 16px;
+  transition: transform 0.3s ease;
+}
+
+.subscribe-btn:hover {
+  box-shadow: 0 0 0 6px rgba(255, 0, 255, 0.25);
+  transform: translateY(-2px);
+}
+
+.subscribe-btn:hover span {
+  transform: translateX(4px);
+}
+
+
